
syntax = "proto3";

package academic;
option go_package = "./proto";

service AcademicService {
    rpc CreateProgram (CreateProgramRequest) returns (ProgramResponse);
    rpc GetProgram (GetProgramRequest) returns (ProgramResponse);
    rpc UpdateProgram (UpdateProgramRequest) returns (ProgramResponse);
    rpc DeleteProgram (DeleteProgramRequest) returns (DeleteProgramResponse);
    rpc ListPrograms (ListProgramsRequest) returns (ListProgramsResponse);

    rpc CreateCourse (CreateCourseRequest) returns (CourseResponse);
    rpc GetCourse (GetCourseRequest) returns (CourseResponse);
    rpc UpdateCourse (UpdateCourseRequest) returns (CourseResponse);
    rpc DeleteCourse (DeleteCourseRequest) returns (DeleteCourseResponse);
    rpc ListCourses (ListCoursesRequest) returns (ListCoursesResponse);
}

message Program {
    int32 id = 1;
    string name = 2;
    string description = 3;
}

message Course {
    int32 id = 1;
    string title = 2;
    string code = 3;
    int32 program_id = 4;
}

message CreateProgramRequest {
    string name = 1;
    string description = 2;
}

message GetProgramRequest {
    int32 id = 1;
}

message UpdateProgramRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
}

message DeleteProgramRequest {
    int32 id = 1;
}

message DeleteProgramResponse {
    string message = 1;
}

message ProgramResponse {
    Program program = 1;
}

message ListProgramsRequest {}

message ListProgramsResponse {
    repeated Program programs = 1;
}

message CreateCourseRequest {
    string title = 1;
    string code = 2;
    int32 program_id = 3;
}

message GetCourseRequest {
    int32 id = 1;
}

message UpdateCourseRequest {
    int32 id = 1;
    string title = 2;
    string code = 3;
    int32 program_id = 4;
}

message DeleteCourseRequest {
    int32 id = 1;
}

message DeleteCourseResponse {
    string message = 1;
}

message CourseResponse {
    Course course = 1;
}

message ListCoursesRequest {}

message ListCoursesResponse {
    repeated Course courses = 1;
}
